--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -30,15 +30,17 @@
 
       <td><%= car.id %></td>
       <td><%= car.title %></td>
-      <!--<td><%= truncate(strip_tags(car.description), :length => 100) %></td>-->
-      <!--<td><%= image_tag(car.image_url, :class => 'list_image', :size => '150x100') %></td>-->
+
       <td><%= car.price %></td>
 
-      <%#:status, :license_plate, :model, :manufactor, style, :location %>
-      <td><%= car.status %></td>
+      <% if (car.status == 'available') %>
+          <td><font color="green"><%= car.status %></font></td>
+      <% else %>
+          <td><font color="red"><%= car.status %></font></td>
+      <% end %>
 
-      <% if (car.status == 'reserved' and Reservation.find_by(car_id:car.id, status:'reserved') != nil) %>
-          <td><%= Reservation.find_by(car_id:car.id, status:'reserved').name %></td>
+      <% if (car.status == 'reserved' and Reservation.find_by(car_id: car.id, status: 'reserved') != nil) %>
+          <td><%= Reservation.find_by(car_id: car.id, status: 'reserved').name %></td>
       <% else %>
           <td></td>
       <% end %>
@@ -52,7 +54,8 @@
       <%#:status, :license_plate, :model, :manufactor, style, :location %>
 
       <td><%= link_to 'ShowHistory', car %></td>
-      <td><%if logged_in?%></td>
+      <td>
+        <% if logged_in? %></td>
 
 
             <td><%= link_to 'Edit', edit_car_path(car) %></td>
@@ -62,7 +65,8 @@
             <td><%= link_to 'Destroy', car, method: :delete, data: {confirm: 'Are you sure?'} %></td>
             <%#<%end%>
 
-            <td><%end%></td>
+            <td>
+        <% end %></td>
         </tr>
   <% end %>
   </tbody>
