--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -21,19 +21,24 @@
 
 <% @cars.each do |car| %>
     <div class="entry">
-      <%= image_tag(car.image_url) %>
+      <% if Rails.application.assets.find_asset(car.image_url) != nil %>
+          <%= image_tag(car.image_url) %>
+      <% else %>
+          <%= image_tag('logo.png') %>
+      <% end %>
+
       <h3><%= car.title %></h3>
       <%= sanitize(car.description) %>
       <div class="price_line">
         <span class="price"><%= car.price %></span>
         <% if car.status == 'available' %>
-            <%if logged_in?%>
+            <% if logged_in? %>
                 <%= button_to 'Reserve', new_reservation_path(:car_id => car.id), :method => :post %>
                 <%= button_to 'Checkout', new_order_path(:car_id => car.id), :method => :post %>
-            <%else%>
-                <%= link_to 'Reserve', login_path%>
-                <%= link_to 'Checkout', login_path%>
-                <%end%>
+            <% else %>
+                <%= link_to 'Reserve', login_path %>
+                <%= link_to 'Checkout', login_path %>
+            <% end %>
         <% end %>
         <%#<%= button_to 'Reservation', reservations_path(:car_id=>car) %>
         <%#<%= button_to 'Reservation', line_items_path(:car_id=>car) %>
