--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -6,6 +6,8 @@
   <%#<h3>Email :<%= Reservation.find(@order.reservation_id).email %></h3>
   <%#<h3>Address :<%= Reservation.find(@order.reservation_id).address %></h3>
   <%#<h3>Reservation id :<%= @order.reservation_id %></h3>
+
+  <h3>Car Information: <%= Car.find(@order.car_id).title %></h3>
   <%= render 'form', order: @order, :reservation_id => @order.reservation_id %>
 
 </fieldset>
