--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -7,14 +7,16 @@
   <tr>
     <th>OrderID</th>
     <th>CarID</th>
+    <th>UserID</th>
     <th>Name</th>
     <th>TEL</th>
-    <th>Email</th>
     <th>Pay type</th>
     <th>RealCheckoutTime</th>
     <th>RealReturnTime</th>
     <th>Status</th>
     <th>Charge</th>
+
+
     <th colspan="3"></th>
   </tr>
   </thead>
@@ -24,11 +26,10 @@
       <tr>
         <td><%= order.id %></td>
         <td><%= order.car_id %></td>
+        <td><%= order.user_id %></td>
         <td><%= order.name %></td>
         <td><%= order.tel %></td>
-        <td><%= order.email %></td>
         <td><%= order.pay_type %></td>
-
 
 
         <% if !order.real_checkout_time.nil? %>
@@ -64,8 +65,13 @@
         </td>
       </tr>
   <% end %>
+
+
   </tbody>
 </table>
+
+
+
 
 <br>
 
