--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           <%else%>
 
       <%= link_to "Reservations", reservations_path%><br/>
-      <%= link_to "Orders", orders_path%><br/>
+      <%= link_to "Checkout History", orders_path%><br/>
       <%= link_to "Profile", current_user%><br/>
       <%= button_to "Log out", logout_path, :method=> :delete %><br/>
           <%if adminu?%>
