--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -20,29 +20,33 @@
             <br>
             <br>
         <% end %>
-
-        <div class="field">
-          <%= form.label :checkout_time %>
-          <%= form.datetime_select :checkout_time, id: :order_checkout_time, :default => {:hour => Time.now.hour, :minute => Time.now.min} %>
-        </div>
     <% end %>
 
-    <div class="field">
-      <%= form.label :return_time %>
-      <%= form.datetime_select :return_time, id: :order_return_time, :default => {:hour => Time.now.hour, :minute => Time.now.min} %>
-    </div>
 
     <div class="field">
       <%= form.label :real_checkout_time %>
-      <%= form.datetime_select :real_checkout_time, id: :order_real_checkout_time, :default => {:hour => Time.now.hour, :minute => Time.now.min} %>
+      <%= form.datetime_select :real_checkout_time, id: :order_real_checkout_time, :default => {:hour => Time.now.hour, :minute => Time.now.min}, :disabled => true %>
     </div>
+
+
+
+    <div class="field">
+      <%= form.label :rental_period %>
+      <%= form.select :return_time, options_for_select([1, 2, 3, 4, 5, 6, 7, 8, 9, 10], 1), {:class => 'form-control', :prompt => ''} %>
+      <%= form.label :hours %>
+    </div>
+
 
 
     <% if @order.reservation_id >= Order::CHECKOUT_DIRECT_START_NO %>
         <div class="field">
-          <%= form.label :rental_period %>
-          <%= form.select :return_time, options_for_select([1, 2, 3, 4, 5, 6, 7, 8, 9, 10], 1), {:class => 'form-control', :prompt => ''} %>
-          <%= form.label :hours %>
+          <%= form.label :name %>
+          <%= form.text_field :name, id: :order_name %>
+        </div>
+    <% else %>
+        <div class="field">
+          <%= form.label :name %>
+          <%= form.text_field :name, id: :reservation_name %>
         </div>
     <% end %>
 
@@ -55,18 +59,6 @@
         <div class="field">
           <%= form.label :tel %>
           <%= form.text_field :tel, id: :reservation_tel %>
-        </div>
-    <% end %>
-
-    <% if @order.reservation_id >= Order::CHECKOUT_DIRECT_START_NO %>
-        <div class="field">
-          <%= form.label :name %>
-          <%= form.text_field :name, id: :order_name %>
-        </div>
-    <% else %>
-        <div class="field">
-          <%= form.label :name %>
-          <%= form.text_field :name, id: :reservation_name %>
         </div>
     <% end %>
 
@@ -105,8 +97,7 @@
     <% end %>
 
     <div class="field">
-      <%= form.label :reservation_id %>
-      <%= form.text_field :reservation_id, id: :reservation_id, :readonly => true %>
+      <%= form.hidden_field :reservation_id, id: :reservation_id, :readonly => true %>
     </div>
 
     <div class="field">
