--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Orders</h1>
+<h1>Checkout History</h1>
 
 <table>
   <thead>
@@ -56,7 +56,7 @@
 
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+        <td><%= link_to 'Cancel', order, method: :delete, data: {confirm: 'Are you sure?'} %></td>
         <td>
           <% if order.status == 'checkedout' %>
               <%# <%= button_to 'Return', return_order_path(order), :method => :get %>
