--- a/app/views/adminl/show.html.erb
+++ b/app/views/adminl/show.html.erb
@@ -10,4 +10,4 @@
 </p>
 <%=link_to "edit", edit_user_path(current_user)%>
 
-<%=link_to 'back',sadminl_index_path%>
+<%=link_to 'back',adminl_index_path%>
