--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,33 +4,34 @@
 <table>
   <thead>
   <tr>
+    <th>ID</th>
     <th>Name</th>
     <th>Email</th>
     <th colspan="3"></th>
   </tr>
   </thead>
 
-<tbody>
+  <tbody>
 
   <% @users.each do |user| %>
 
-     <tr>
+      <tr>
+        <td> <%= user.id %></td>
+        <td> <%= user.name %></td>
+        <td><%= user.email %></td>
 
-       <td> <%=user.name%></td>
-       <td><%=user.email%></td>
-       <%@reservation=Reservation.where(:user_id=>current_user.id)%>
-        <% if current_user.admin?%>
-           <td><%=link_to "show",user_path(user)%></td>
-           <td><%=link_to "edit",edit_user_path(user)%></td>
-           <%if @reservation != nil%>
-               <td><%= link_to "delete", users_path,data: { confirm: "This user can not be delete since he still has an order" }%></td>
-               <%else%>
-           <td><%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %></td>
-               <%end%>
+        <% if current_user.admin? %>
+            <td><%= link_to "show", user_path(user) %></td>
+            <td><%= link_to "edit", edit_user_path(user) %></td>
+            <% if !Reservation.find_by_user_id(user.id).nil? or !@order=Order.find_by_user_id(user.id).nil? %>
+                <td><%= link_to "delete", users_path, data: {confirm: "This user can not be delete since he still has an order"} %></td>
+            <% else %>
+                <td><%= link_to "delete", user, method: :delete, data: {confirm: "You sure?"} %></td>
+            <% end %>
         <% end %>
 
 
   <% end %>
   </tr>
-</tbody>
+  </tbody>
 </table>
