--- a/app/views/sadminl/index.html.erb
+++ b/app/views/sadminl/index.html.erb
@@ -4,6 +4,7 @@
 <table>
   <thead>
   <tr>
+    <th>ID</th>
     <th>Name</th>
     <th>email</th>
     <th colspan ="1"></th>
@@ -12,6 +13,7 @@
 <tbody>
   <% @users.each do |user| %>
 <tr>
+        <td><%=user.id%></td>
         <td><%=user.name%></td>
         <td><%=user.email%></td>
         <td><%=link_to'show',user%>
